[package]
name = "oasis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, version = "0.11.5" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = { version = "0.5.5" }
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
anyhow = "1.0.71"
